--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-html-parser": "^1.2.20",
     "showdown": "^1.9.1",
     "slugify": "^1.4.4",
+    "valid-url": "^1.0.9",
     "webflow-api": "^0.5.0"
   },
   "devDependencies": {
