add package.json info

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "crossposter",
-  "version": "1.0.0",
-  "description": "",
+  "name": "crosspost",
+  "version": "1.1.0",
+  "description": "CrossPost allows you to write your articles in markdown once and push publish them on different platforms like webflow, dev.to, GitHub & more in one go!",
   "main": "index.js",
   "bin": {
     "crosspost": "./index.js"
@@ -16,7 +16,11 @@
     "Blog",
     "dev.to"
   ],
-  "author": "Rich Stone",
+  "author": {
+    "name": "Richard Steinmetz",
+    "email" : "rich@fullstack.coach",
+    "url" : "https://fullstack.coach"
+  },
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.1.0",
@@ -32,6 +36,14 @@
     "slugify": "^1.4.4",
     "valid-url": "^1.0.9",
     "webflow-api": "^0.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RichStone/crosspost-markdown.git"
+  },  
+  "bugs": {
+    "url" : "https://github.com/RichStone/crosspost-markdown/issues", 
+    "email" : "rich@fullstack.coach"
   },
   "devDependencies": {
     "chai": "^4.2.0",
