--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crosspost",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "CrossPost allows you to write your articles in markdown once and push publish them on different platforms like webflow, dev.to, GitHub & more in one go!",
   "main": "index.js",
   "bin": {
@@ -14,7 +14,10 @@
     "Webflow",
     "Cross Post",
     "Blog",
-    "dev.to"
+    "dev.to",
+    "content",
+    "writing",
+    "integration"
   ],
   "author": {
     "name": "Richard Steinmetz",
